feat (Add tailwind): Replace antd package & redesign home page

--- a/packages/ui/styles/globals.css
+++ b/packages/ui/styles/globals.css
@@ -1,213 +1,3 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-    sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.site-layout-content {
-  min-height: 280px;
-  padding: 24px;
-  /* background: #fff; */
-}
-
-#components-layout-demo-top .logo {
-  float: left;
-  width: 120px;
-  height: 31px;
-  margin: 16px 24px 16px 0;
-  background: rgba(255, 255, 255, 0.3);
-}
-
-.ant-row-rtl #components-layout-demo-top .logo {
-  float: right;
-  margin: 16px 0 16px 24px;
-}
-
-.header {
-  background-color: #fbfbfb;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.site-page-header {
-  background-color: #fbfbfb;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  height: 4rem;
-}
-
-.site-page-header:hover {
-  border: 1px solid blue;
-}
-
-.header-items {
-  display: flex;
-  flex-direction: row;
-  height: 100%;
-  width: 10%;
-  justify-content: center;
-}
-
-.logo-container {
-  height: 4rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  font-size: x-large;
-  color: white;
-}
-
-.h2 {
-  min-width: 114px;
-  max-width: 60vw;
-  height: 28px;
-  font-size: 18px;
-  line-height: 28px;
-  text-align: center;
-  transition: opacity 300ms ease-out;
-}
-
-.bell {
-  font-size: 28px;
-  color: lightgray;
-}
-
-#components-layout-demo-top-side-2 .logo {
-  float: left;
-  width: 120px;
-  height: 31px;
-  margin: 16px 24px 16px 0;
-  background: rgba(255, 255, 255, 0.3);
-}
-
-.ant-row-rtl #components-layout-demo-top-side-2 .logo {
-  float: right;
-  margin: 16px 0 16px 24px;
-}
-
-.site-layout-header {
-  background: #fff;
-  padding: 0;
-  margin-left: 2px;
-  z-index: 50;
-}
-
-.site-layout-background {
-  background: #fff;
-  padding: 24;
-  min-height: 360;
-}
-
-.sideBar {
-  background-color: rgba(62, 52, 101, 1);
-  color: #fff;
-}
-
-.padding-margins {
-  padding: 100px 150px;
-}
-
-.ant-menu.ant-menu-dark .ant-menu-item-selected.customclass {
-  background-color: #4f397d;
-
-  /*Overriden property*/
-}
-
-.ant-menu.ant-menu-dark .ant-menu-item-selected.customclass:hover {
-  background-color: rgba(108, 94, 161, 1);
-  /*Overriden property*/
-}
-.ant-menu.ant-menu-dark .ant-menu-item-selected {
-  background-color: rgb(143, 124, 214);
-  /*Overriden property*/
-}
-
-.btnClass {
-  background-color: transparent;
-  border: 0;
-  color: lightgray;
-}
-
-.btnClass:hover {
-  transform: scaleX(1.1);
-}
-
-.btnContainer {
-  padding: 20px 0;
-}
-
-.table-striped-rows tr:nth-child(1) {
-  color: #000;
-}
-
-.badgeTwo {
-  color: gray;
-  font-size: 18px;
-  background: transparent;
-}
-
-.badge-One {
-  color: blue;
-  background-color: skyblue;
-}
-
-.menu-item {
-  height: 40px;
-  display: flex;
-  justify-content: flex-start;
-}
-.menu-icon {
-  width: 20px;
-  height: 30px;
-  margin-top: 2.5%;
-  margin-right: 5%;
-}
-
-.mainAreaContainer {
-  padding: 26px;
-  min-height: 93.5vh;
-  overflow: auto;
-}
-
-thead[class*='ant-table-thead'] th {
-  color: rgba(94, 94, 94, 1);
-}
-
-td {
-  color: rgba(130, 130, 130, 1);
-}
-
-.m-auto {
-  margin: auto;
-}
-
-.flex-row {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-around;
-}
-.flex-row-center {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-.flex-col-center {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
