--- a/packages/ui/styles/layout.module.css
+++ b/packages/ui/styles/layout.module.css
@@ -6,3 +6,7 @@
   @apply flex items-center px-5 py-2 text-white text-sm focus:bg-purple-600 
   focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-opacity-50;
 }
+
+.nav-bar{
+  @apply bg-white py-4 px-8 h-16 flex items-center justify-between border border-gray-100 hover:border-blue-400
+}
