--- a/packages/ui/styles/dropdown.module.css
+++ b/packages/ui/styles/dropdown.module.css
@@ -2,13 +2,20 @@
     position: absolute;
     background-color: #ffffff;
     color: black;
-    z-index: 50;
+    z-index: 100;
     display: flex;
     flex-direction: column;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
 .drop-down > li {
     color: black;
     padding: 16px 8px;
     cursor: pointer;
+}
+
+.d-d{
+    width: 20rem;
+    top: 3rem;
+    padding-top: 0.5rem;
 }
