--- a/packages/ui/styles/antd.less
+++ b/packages/ui/styles/antd.less
@@ -1,6 +1,11 @@
+// https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 @import '~antd/dist/antd.less';
 
-@primary-color: rgb(86, 142, 30); // primary color for all components
+@primary-color: #6c5ea1; // primary color for all components
+@menu-bg: #6c5ea1;
+@layout-header-background: #3e3465;
+@menu-inline-submenu-bg: #6c5ea1;
+@menu-item-color: #FFF;
 @link-color: #1890ff; // link color
 @success-color: #52c41a; // success state color
 @warning-color: #faad14; // warning state color
