- Catch exception for 404 issue on page load - axios issue  - Fix router not defined issue  - Minor UI changes in

--- a/packages/ui/styles/workspace.module.css
+++ b/packages/ui/styles/workspace.module.css
@@ -1,3 +1,17 @@
 .info-form > input {
-    @apply mt-6 placeholder-gray-800 font-extralight;
+  @apply mt-6 placeholder-gray-800 font-extralight;
+}
+
+.icon {
+  height: 5rem;
+  width: 5rem;
+  cursor: pointer;
+}
+
+.infoContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2rem;
+  border-bottom: 1px solid gray;
 }
