--- a/packages/ui/styles/dropdown.module.css
+++ b/packages/ui/styles/dropdown.module.css
@@ -5,16 +5,19 @@
     z-index: 100;
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
-.drop-down > li {
+.drop-down>li {
+    display: flex;
     color: black;
-    padding: 16px 8px;
+    padding: 16px 4px;
     cursor: pointer;
+    color: gray;
+    
 }
 
-.d-d{
+.d-d {
     width: 20rem;
     top: 3rem;
     padding-top: 0.5rem;
