feat(ui): redo questionnaire in antd and taskdetail page (#44)
* Replace button and inputfield component with ant design components

* change css designs

* change tailwind css to custom css and antd components

* add task detail page

* add ant design form compoenent

* Change form to ant design form components

* Load Quill editor dynamically without ssr

* add dropdown

* change mutation form code

* change to antd components

* Change text editor to react text editor

* Add stepper antdesign

* Fix form design

* remove inline styles and classnames

* Fix dropdown design

* add react file upload

Co-authored-by: Talha <talha@pipesort.com>
Co-authored-by: Brett Andrews <brett.j.andrews@gmail.com>

--- a/packages/ui/styles/layout.module.css
+++ b/packages/ui/styles/layout.module.css
@@ -1,12 +1,65 @@
 .notification-count {
-  @apply absolute -top-1 left-3 w-4 h-4 rounded-full bg-red-500 px-1 py-0 flex flex-col justify-between;
+  position: absolute;
+  top: -1;
+  left: 3;
+  width: 12px;
+  height: 12px;
+  border-radius: 100%;
+  background-color: red;
+  padding: 0 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .sidebar-item {
-  @apply flex items-center px-5 py-2 text-white text-sm focus:bg-purple-600 
-  focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-opacity-50;
+  display: flex;
+  align-items: center;
+  padding: 10px 25px;
+  color: white;
+  font-size: small;
 }
 
-.nav-bar{
-  @apply bg-white py-4 px-8 h-16 flex items-center justify-between border border-gray-100 hover:border-gray-100
+.sidebar-item:focus {
+  background-color: purple;
+  outline: none;
+}
+
+.nav-bar {
+  background-color: #ffffff;
+  padding: 10px 20px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid lightgray;
+}
+
+.ul-One {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ul-Two {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 40%;
+  /* w-2/5  */
+  /* px-12 */
+  padding: 0 24px;
+}
+
+.tooltip {
+  position: absolute;
+  padding: 20px;
+  color: #fff;
+  background-color: black;
+  font-size: small;
+  z-index: 50;
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  top: 12;
 }
