--- a/packages/ui/styles/dropdown.module.css
+++ b/packages/ui/styles/dropdown.module.css
@@ -1,7 +1,24 @@
-.drop-down{
-    @apply absolute  bg-white  shadow-xl  text-black z-50 flex flex-col;
+.drop-down {
+    position: absolute;
+    background-color: #ffffff;
+    color: black;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
 
-.drop-down > li{
-    @apply text-black py-4 px-2 block  cursor-pointer;
+.drop-down>li {
+    display: flex;
+    color: black;
+    padding: 16px 4px;
+    cursor: pointer;
+    color: gray;
+    
+}
+
+.d-d {
+    width: 20rem;
+    top: 3rem;
+    padding-top: 0.5rem;
 }
