Login screen fix

--- a/packages/ui/styles/antd.less
+++ b/packages/ui/styles/antd.less
@@ -1,7 +1,7 @@
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 @import '~antd/dist/antd.less';
 
-@primary-color: #6c5ea1; // primary color for all components
+@primary-color: #1890ff; // primary color for all components
 @menu-bg: #6c5ea1;
 @layout-header-background: #3e3465;
 @menu-inline-submenu-bg: #6c5ea1;
